# Rebuff

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  upstream-compat.yml
adapters/: __init__.py  base.py  llmguard_adapter.py  piguard_adapter.py  puppetry_adapter.py  pytector_adapter.py
cli/: __init__.py  commands.py  hook_handler.py
config/: engines.toml  integrations.toml  pipeline.toml  trust_levels.toml
core/: __init__.py  pipeline.py  sanitize.py  trust.py
docs/: claude-code-integration.md
integrations/: __init__.py  base.py  claude_code.py  clawbot.py  multiagent.py
scripts/: pin-versions.sh  setup-models.sh  update-upstream.sh
services/llmguard/: Dockerfile  main.py
services/piguard/: Dockerfile  main.py
services/pytector/: Dockerfile  main.py
services/web/: Dockerfile  main.py
tests/attack/: conftest.py  test_known_attacks.py  test_self_injection.py
tests/benchmark/: conftest.py  test_latency.py
tests/benign/: conftest.py  test_false_positives.py
tests/compat/: test_adapter_contract.py  test_adapters.py  test_llmguard_adapter.py  test_piguard_adapter.py
tests/integration/: conftest.py  test_full_scan.py  test_pipeline_integration.py  test_pipeline_parallel.py  test_pipeline_sequential.py  test_pipeline_weighted.py
tests/unit/: test_base.py  test_cli.py  test_integrations.py  test_pipeline.py  test_pipeline_config.py  test_sanitize.py  test_trust.py
